# serializer version: 1
# name: test_get_named_grid
  '''
  ```{mermaid}
  graph LR
      N0("Position"):::input-node
      N1("Volume Cube<br/><small>(-1,-1,-1)</small>"):::geometry-node
      N2("Vector Math<br/><small>(SCALE)</small><br/><small>×2</small>"):::vector-node
      N3("Get Named Grid"):::geometry-node
      N4("Position"):::input-node
      N5("Vector Math<br/><small>(ADD)</small><br/><small>(1e+01,1e+01,1e+01)</small>"):::vector-node
      N6("Field to Grid"):::geometry-node
      N1 -->|"Volume->Volume"| N3
      N0 -->|"Position->Vector"| N2
      N2 -->|"Vector->Vector"| N5
      N4 -->|"Position->Position"| N6
      N5 -->|"Vector->value"| N6
      N3 -->|"Grid->Topology"| N6
  ```
  '''
# ---
# name: test_repeat
  '''
  ```{mermaid}
  graph LR
      N0("Cube"):::geometry-node
      N1("Position"):::input-node
      N2("Vector"):::input-node
      N3("Repeat Input"):::default-node
      N4("Position"):::input-node
      N5("Vector Math<br/><small>(SCALE)</small>"):::vector-node
      N6("Vector Math<br/><small>(MULTIPLY)</small>"):::vector-node
      N7("Vector Math<br/><small>(MULTIPLY)</small>"):::vector-node
      N8("Set Position"):::geometry-node
      N9("Repeat Output"):::default-node
      N10("Set Position"):::geometry-node
      N0 -->|"Mesh->cube"| N3
      N1 -->|"Position->Position"| N3
      N3 -->|"Position->Vector"| N6
      N4 -->|"Position->Vector"| N6
      N2 -->|"Vector->Vector"| N5
      N3 -->|"Iteration->Scale"| N5
      N5 -->|"Vector->Vector"| N7
      N6 -->|"Vector->Vector"| N7
      N7 -->|"Vector->Offset"| N8
      N3 -->|"cube->Geometry"| N8
      N8 -->|"Geometry->cube"| N9
      N9 -->|"Position->Position"| N10
      N9 -->|"cube->Geometry"| N10
      N6 -->|"Vector->Position"| N9
  ```
  '''
# ---
# name: test_repeat.1
  '''
  ```{mermaid}
  graph LR
      N0("Repeat Input"):::default-node
      N1("Random Value<br/><small>(-1,-1,-1)</small>"):::converter-node
      N2("Points"):::geometry-node
      N3("Join Geometry"):::geometry-node
      N4("Repeat Output"):::default-node
      N3 -->|"Geometry->Geometry"| N4
      N0 -->|"Iteration->Seed"| N1
      N0 -->|"Iteration->Count"| N2
      N1 -->|"Value->Position"| N2
      N2 -->|"Points->Geometry"| N3
      N0 -->|"Geometry->Geometry"| N3
  ```
  '''
# ---
# name: test_simulation
  '''
  ```{mermaid}
  graph LR
      N0("Cube"):::geometry-node
      N1("Position"):::input-node
      N2("Vector"):::input-node
      N3("Simulation Input"):::default-node
      N4("Position"):::input-node
      N5("Vector Math<br/><small>(SCALE)</small>"):::vector-node
      N6("Vector Math<br/><small>(MULTIPLY)</small>"):::vector-node
      N7("Vector Math<br/><small>(MULTIPLY)</small>"):::vector-node
      N8("Set Position"):::geometry-node
      N9("Simulation Output"):::default-node
      N10("Set Position"):::geometry-node
      N0 -->|"Mesh->cube"| N3
      N1 -->|"Position->Position"| N3
      N3 -->|"Position->Vector"| N6
      N4 -->|"Position->Vector"| N6
      N2 -->|"Vector->Vector"| N5
      N3 -->|"Delta Time->Scale"| N5
      N5 -->|"Vector->Vector"| N7
      N6 -->|"Vector->Vector"| N7
      N7 -->|"Vector->Offset"| N8
      N3 -->|"cube->Geometry"| N8
      N8 -->|"Geometry->cube"| N9
      N9 -->|"Position->Position"| N10
      N9 -->|"cube->Geometry"| N10
      N6 -->|"Vector->Position"| N9
  ```
  '''
# ---
# name: test_switch_repeatzone
  {
      "blender_version": "5.2.0 Alpha",
      "tree_clipper_version": "0.1.6",
      "node_trees": [
          {
              "id": 0,
              "data": {
                  "name": "Geometry Nodes",
                  "use_fake_user": false,
                  "use_extra_user": false,
                  "is_runtime_data": false,
                  "tag": false,
                  "color_tag": "NONE",
                  "default_group_node_width": 140,
                  "description": "",
                  "bl_use_group_interface": true,
                  "interface": {
                      "id": 1,
                      "data": {
                          "active_index": 0,
                          "items_tree": {
                              "id": 2,
                              "data": {
                                  "items": [
                                      {
                                          "id": 3,
                                          "data": {
                                              "name": "Geometry",
                                              "description": "",
                                              "socket_type": "NodeSocketGeometry",
                                              "hide_value": false,
                                              "hide_in_modifier": false,
                                              "force_non_field": false,
                                              "is_inspect_output": false,
                                              "is_panel_toggle": false,
                                              "layer_selection_field": false,
                                              "menu_expanded": false,
                                              "optional_label": false,
                                              "select": false,
                                              "attribute_domain": "POINT",
                                              "default_attribute_name": "",
                                              "structure_type": "AUTO",
                                              "default_input": "VALUE",
                                              "in_out": "OUTPUT",
                                              "item_type": "SOCKET"
                                          }
                                      },
                                      {
                                          "id": 4,
                                          "data": {
                                              "name": "Geometry",
                                              "description": "",
                                              "socket_type": "NodeSocketGeometry",
                                              "hide_value": false,
                                              "hide_in_modifier": false,
                                              "force_non_field": false,
                                              "is_inspect_output": false,
                                              "is_panel_toggle": false,
                                              "layer_selection_field": false,
                                              "menu_expanded": false,
                                              "optional_label": false,
                                              "select": false,
                                              "attribute_domain": "POINT",
                                              "default_attribute_name": "",
                                              "structure_type": "AUTO",
                                              "default_input": "VALUE",
                                              "in_out": "INPUT",
                                              "item_type": "SOCKET"
                                          }
                                      }
                                  ]
                              }
                          }
                      }
                  },
                  "nodes": {
                      "id": 5,
                      "data": {
                          "active": null,
                          "items": [
                              {
                                  "id": 6,
                                  "data": {
                                      "location": [
                                          -403.1111145019531,
                                          204.44444274902344
                                      ],
                                      "location_absolute": [
                                          -403.1111145019531,
                                          204.44444274902344
                                      ],
                                      "width": 140.0,
                                      "height": 100.0,
                                      "name": "Group Input",
                                      "label": "",
                                      "warning_propagation": "ALL",
                                      "use_custom_color": false,
                                      "color": [
                                          0.6079999804496765,
                                          0.6079999804496765,
                                          0.6079999804496765
                                      ],
                                      "select": true,
                                      "show_options": true,
                                      "show_preview": false,
                                      "hide": false,
                                      "mute": false,
                                      "show_texture": false,
                                      "inputs": {
                                          "id": 7,
                                          "data": {
                                              "items": []
                                          }
                                      },
                                      "outputs": {
                                          "id": 8,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 9,
                                                      "data": {
                                                          "name": "Geometry",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  },
                                                  {
                                                      "id": 10,
                                                      "data": {
                                                          "name": "",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "CUSTOM",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "bl_idname": "NodeGroupInput",
                                      "parent": null
                                  }
                              },
                              {
                                  "id": 11,
                                  "data": {
                                      "location": [
                                          604.888916015625,
                                          204.44444274902344
                                      ],
                                      "location_absolute": [
                                          604.888916015625,
                                          204.44444274902344
                                      ],
                                      "width": 140.0,
                                      "height": 100.0,
                                      "name": "Group Output",
                                      "label": "",
                                      "warning_propagation": "ALL",
                                      "use_custom_color": false,
                                      "color": [
                                          0.6079999804496765,
                                          0.6079999804496765,
                                          0.6079999804496765
                                      ],
                                      "select": true,
                                      "show_options": true,
                                      "show_preview": false,
                                      "hide": false,
                                      "mute": false,
                                      "show_texture": false,
                                      "inputs": {
                                          "id": 12,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 13,
                                                      "data": {
                                                          "name": "Geometry",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  },
                                                  {
                                                      "id": 14,
                                                      "data": {
                                                          "name": "",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "CUSTOM",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "outputs": {
                                          "id": 15,
                                          "data": {
                                              "items": []
                                          }
                                      },
                                      "bl_idname": "NodeGroupOutput",
                                      "parent": null,
                                      "is_active_output": true
                                  }
                              },
                              {
                                  "id": 16,
                                  "data": {
                                      "location": [
                                          -203.11111450195312,
                                          -55.55555725097656
                                      ],
                                      "location_absolute": [
                                          -203.11111450195312,
                                          -55.55555725097656
                                      ],
                                      "width": 140.0,
                                      "height": 100.0,
                                      "name": "Cube",
                                      "label": "",
                                      "warning_propagation": "ALL",
                                      "use_custom_color": false,
                                      "color": [
                                          0.6079999804496765,
                                          0.6079999804496765,
                                          0.6079999804496765
                                      ],
                                      "select": true,
                                      "show_options": true,
                                      "show_preview": false,
                                      "hide": false,
                                      "mute": false,
                                      "show_texture": false,
                                      "inputs": {
                                          "id": 17,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 18,
                                                      "data": {
                                                          "name": "Size",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "VECTOR",
                                                          "display_shape": "LINE",
                                                          "default_value": [
                                                              1.0,
                                                              1.0,
                                                              1.0
                                                          ]
                                                      }
                                                  },
                                                  {
                                                      "id": 19,
                                                      "data": {
                                                          "name": "Vertices X",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "INT",
                                                          "display_shape": "LINE",
                                                          "default_value": 2
                                                      }
                                                  },
                                                  {
                                                      "id": 20,
                                                      "data": {
                                                          "name": "Vertices Y",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "INT",
                                                          "display_shape": "LINE",
                                                          "default_value": 2
                                                      }
                                                  },
                                                  {
                                                      "id": 21,
                                                      "data": {
                                                          "name": "Vertices Z",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "INT",
                                                          "display_shape": "LINE",
                                                          "default_value": 2
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "outputs": {
                                          "id": 22,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 23,
                                                      "data": {
                                                          "name": "Mesh",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "LINE"
                                                      }
                                                  },
                                                  {
                                                      "id": 24,
                                                      "data": {
                                                          "name": "UV Map",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "VECTOR",
                                                          "display_shape": "DIAMOND",
                                                          "default_value": [
                                                              0.0,
                                                              0.0,
                                                              0.0
                                                          ]
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "bl_idname": "GeometryNodeMeshCube",
                                      "parent": null
                                  }
                              },
                              {
                                  "id": 25,
                                  "data": {
                                      "location": [
                                          -203.11111450195312,
                                          -371.5555419921875
                                      ],
                                      "location_absolute": [
                                          -203.11111450195312,
                                          -371.5555419921875
                                      ],
                                      "width": 140.0,
                                      "height": 100.0,
                                      "name": "Ico Sphere",
                                      "label": "",
                                      "warning_propagation": "ALL",
                                      "use_custom_color": false,
                                      "color": [
                                          0.6079999804496765,
                                          0.6079999804496765,
                                          0.6079999804496765
                                      ],
                                      "select": true,
                                      "show_options": true,
                                      "show_preview": false,
                                      "hide": false,
                                      "mute": false,
                                      "show_texture": false,
                                      "inputs": {
                                          "id": 26,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 27,
                                                      "data": {
                                                          "name": "Radius",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "VALUE",
                                                          "display_shape": "LINE",
                                                          "default_value": 1.0
                                                      }
                                                  },
                                                  {
                                                      "id": 28,
                                                      "data": {
                                                          "name": "Subdivisions",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "INT",
                                                          "display_shape": "LINE",
                                                          "default_value": 1
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "outputs": {
                                          "id": 29,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 30,
                                                      "data": {
                                                          "name": "Mesh",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "LINE"
                                                      }
                                                  },
                                                  {
                                                      "id": 31,
                                                      "data": {
                                                          "name": "UV Map",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "VECTOR",
                                                          "display_shape": "DIAMOND",
                                                          "default_value": [
                                                              0.0,
                                                              0.0,
                                                              0.0
                                                          ]
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "bl_idname": "GeometryNodeMeshIcoSphere",
                                      "parent": null
                                  }
                              },
                              {
                                  "id": 32,
                                  "data": {
                                      "location": [
                                          -203.11111450195312,
                                          -539.5555419921875
                                      ],
                                      "location_absolute": [
                                          -203.11111450195312,
                                          -539.5555419921875
                                      ],
                                      "width": 140.0,
                                      "height": 100.0,
                                      "name": "Grid",
                                      "label": "",
                                      "warning_propagation": "ALL",
                                      "use_custom_color": false,
                                      "color": [
                                          0.6079999804496765,
                                          0.6079999804496765,
                                          0.6079999804496765
                                      ],
                                      "select": true,
                                      "show_options": true,
                                      "show_preview": false,
                                      "hide": false,
                                      "mute": false,
                                      "show_texture": false,
                                      "inputs": {
                                          "id": 33,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 34,
                                                      "data": {
                                                          "name": "Size X",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "VALUE",
                                                          "display_shape": "LINE",
                                                          "default_value": 1.0
                                                      }
                                                  },
                                                  {
                                                      "id": 35,
                                                      "data": {
                                                          "name": "Size Y",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "VALUE",
                                                          "display_shape": "LINE",
                                                          "default_value": 1.0
                                                      }
                                                  },
                                                  {
                                                      "id": 36,
                                                      "data": {
                                                          "name": "Vertices X",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "INT",
                                                          "display_shape": "LINE",
                                                          "default_value": 3
                                                      }
                                                  },
                                                  {
                                                      "id": 37,
                                                      "data": {
                                                          "name": "Vertices Y",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "INT",
                                                          "display_shape": "LINE",
                                                          "default_value": 3
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "outputs": {
                                          "id": 38,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 39,
                                                      "data": {
                                                          "name": "Mesh",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "LINE"
                                                      }
                                                  },
                                                  {
                                                      "id": 40,
                                                      "data": {
                                                          "name": "UV Map",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "VECTOR",
                                                          "display_shape": "DIAMOND",
                                                          "default_value": [
                                                              0.0,
                                                              0.0,
                                                              0.0
                                                          ]
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "bl_idname": "GeometryNodeMeshGrid",
                                      "parent": null
                                  }
                              },
                              {
                                  "id": 41,
                                  "data": {
                                      "location": [
                                          -203.11111450195312,
                                          204.44444274902344
                                      ],
                                      "location_absolute": [
                                          -203.11111450195312,
                                          204.44444274902344
                                      ],
                                      "width": 140.0,
                                      "height": 100.0,
                                      "name": "Repeat Input",
                                      "label": "",
                                      "warning_propagation": "ALL",
                                      "use_custom_color": false,
                                      "color": [
                                          0.6079999804496765,
                                          0.6079999804496765,
                                          0.6079999804496765
                                      ],
                                      "select": true,
                                      "show_options": true,
                                      "show_preview": false,
                                      "hide": false,
                                      "mute": false,
                                      "show_texture": false,
                                      "inputs": {
                                          "id": 42,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 43,
                                                      "data": {
                                                          "name": "Iterations",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "INT",
                                                          "display_shape": "LINE",
                                                          "default_value": 5
                                                      }
                                                  },
                                                  {
                                                      "id": 44,
                                                      "data": {
                                                          "name": "Geometry",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  },
                                                  {
                                                      "id": 45,
                                                      "data": {
                                                          "name": "",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "CUSTOM",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "outputs": {
                                          "id": 46,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 47,
                                                      "data": {
                                                          "name": "Iteration",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "INT",
                                                          "display_shape": "LINE",
                                                          "default_value": 0
                                                      }
                                                  },
                                                  {
                                                      "id": 48,
                                                      "data": {
                                                          "name": "Geometry",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  },
                                                  {
                                                      "id": 49,
                                                      "data": {
                                                          "name": "",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "CUSTOM",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "bl_idname": "GeometryNodeRepeatInput",
                                      "parent": null,
                                      "paired_output": "Repeat Output"
                                  }
                              },
                              {
                                  "id": 50,
                                  "data": {
                                      "location": [
                                          404.8888854980469,
                                          204.44444274902344
                                      ],
                                      "location_absolute": [
                                          404.8888854980469,
                                          204.44444274902344
                                      ],
                                      "width": 140.0,
                                      "height": 100.0,
                                      "name": "Repeat Output",
                                      "label": "",
                                      "warning_propagation": "ALL",
                                      "use_custom_color": false,
                                      "color": [
                                          0.6079999804496765,
                                          0.6079999804496765,
                                          0.6079999804496765
                                      ],
                                      "select": true,
                                      "show_options": true,
                                      "show_preview": false,
                                      "hide": false,
                                      "mute": false,
                                      "show_texture": false,
                                      "active_index": 0,
                                      "inspection_index": 0,
                                      "inputs": {
                                          "id": 51,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 52,
                                                      "data": {
                                                          "name": "Geometry",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  },
                                                  {
                                                      "id": 53,
                                                      "data": {
                                                          "name": "",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "CUSTOM",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "outputs": {
                                          "id": 54,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 55,
                                                      "data": {
                                                          "name": "Geometry",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  },
                                                  {
                                                      "id": 56,
                                                      "data": {
                                                          "name": "",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "CUSTOM",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "bl_idname": "GeometryNodeRepeatOutput",
                                      "repeat_items": {
                                          "id": 57,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 58,
                                                      "data": {
                                                          "name": "Geometry",
                                                          "socket_type": "GEOMETRY",
                                                          "color": null
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "parent": null
                                  }
                              },
                              {
                                  "id": 59,
                                  "data": {
                                      "location": [
                                          0.888885498046875,
                                          -55.55555725097656
                                      ],
                                      "location_absolute": [
                                          0.888885498046875,
                                          -55.55555725097656
                                      ],
                                      "width": 140.0,
                                      "height": 100.0,
                                      "name": "Index Switch",
                                      "label": "",
                                      "warning_propagation": "ALL",
                                      "use_custom_color": false,
                                      "color": [
                                          0.6079999804496765,
                                          0.6079999804496765,
                                          0.6079999804496765
                                      ],
                                      "select": true,
                                      "show_options": true,
                                      "show_preview": false,
                                      "hide": false,
                                      "mute": false,
                                      "show_texture": false,
                                      "inputs": {
                                          "id": 60,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 61,
                                                      "data": {
                                                          "name": "Index",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "INT",
                                                          "display_shape": "LINE",
                                                          "default_value": 0
                                                      }
                                                  },
                                                  {
                                                      "id": 62,
                                                      "data": {
                                                          "name": "0",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  },
                                                  {
                                                      "id": 63,
                                                      "data": {
                                                          "name": "1",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  },
                                                  {
                                                      "id": 64,
                                                      "data": {
                                                          "name": "2",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 1,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  },
                                                  {
                                                      "id": 65,
                                                      "data": {
                                                          "name": "",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "CUSTOM",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "outputs": {
                                          "id": 66,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 67,
                                                      "data": {
                                                          "name": "Output",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "CIRCLE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "bl_idname": "GeometryNodeIndexSwitch",
                                      "parent": null,
                                      "index_switch_items": {
                                          "id": 68,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 69,
                                                      "data": {}
                                                  },
                                                  {
                                                      "id": 70,
                                                      "data": {}
                                                  },
                                                  {
                                                      "id": 71,
                                                      "data": {}
                                                  }
                                              ]
                                          }
                                      },
                                      "data_type": "GEOMETRY"
                                  }
                              },
                              {
                                  "id": 72,
                                  "data": {
                                      "location": [
                                          204.88888549804688,
                                          204.44444274902344
                                      ],
                                      "location_absolute": [
                                          204.88888549804688,
                                          204.44444274902344
                                      ],
                                      "width": 140.0,
                                      "height": 100.0,
                                      "name": "Join Geometry",
                                      "label": "",
                                      "warning_propagation": "ALL",
                                      "use_custom_color": false,
                                      "color": [
                                          0.6079999804496765,
                                          0.6079999804496765,
                                          0.6079999804496765
                                      ],
                                      "select": true,
                                      "show_options": true,
                                      "show_preview": false,
                                      "hide": false,
                                      "mute": false,
                                      "show_texture": false,
                                      "inputs": {
                                          "id": 73,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 74,
                                                      "data": {
                                                          "name": "Geometry",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "LINE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "outputs": {
                                          "id": 75,
                                          "data": {
                                              "items": [
                                                  {
                                                      "id": 76,
                                                      "data": {
                                                          "name": "Geometry",
                                                          "description": "",
                                                          "hide": false,
                                                          "enabled": true,
                                                          "link_limit": 4095,
                                                          "show_expanded": false,
                                                          "hide_value": false,
                                                          "pin_gizmo": false,
                                                          "type": "GEOMETRY",
                                                          "display_shape": "LINE"
                                                      }
                                                  }
                                              ]
                                          }
                                      },
                                      "bl_idname": "GeometryNodeJoinGeometry",
                                      "parent": null
                                  }
                              }
                          ]
                      }
                  },
                  "bl_idname": "GeometryNodeTree",
                  "annotation": null,
                  "links": {
                      "id": 77,
                      "data": {
                          "items": [
                              {
                                  "id": 78,
                                  "data": {
                                      "is_valid": true,
                                      "is_muted": false,
                                      "from_socket": 9,
                                      "to_socket": 44
                                  }
                              },
                              {
                                  "id": 79,
                                  "data": {
                                      "is_valid": true,
                                      "is_muted": false,
                                      "from_socket": 23,
                                      "to_socket": 62
                                  }
                              },
                              {
                                  "id": 80,
                                  "data": {
                                      "is_valid": true,
                                      "is_muted": false,
                                      "from_socket": 30,
                                      "to_socket": 63
                                  }
                              },
                              {
                                  "id": 81,
                                  "data": {
                                      "is_valid": true,
                                      "is_muted": false,
                                      "from_socket": 39,
                                      "to_socket": 64
                                  }
                              },
                              {
                                  "id": 82,
                                  "data": {
                                      "is_valid": true,
                                      "is_muted": false,
                                      "from_socket": 47,
                                      "to_socket": 61
                                  }
                              },
                              {
                                  "id": 83,
                                  "data": {
                                      "is_valid": true,
                                      "is_muted": false,
                                      "multi_input_sort_id": 0,
                                      "from_socket": 67,
                                      "to_socket": 74
                                  }
                              },
                              {
                                  "id": 84,
                                  "data": {
                                      "is_valid": true,
                                      "is_muted": false,
                                      "from_socket": 76,
                                      "to_socket": 52
                                  }
                              },
                              {
                                  "id": 85,
                                  "data": {
                                      "is_valid": true,
                                      "is_muted": false,
                                      "from_socket": 55,
                                      "to_socket": 13
                                  }
                              },
                              {
                                  "id": 86,
                                  "data": {
                                      "is_valid": true,
                                      "is_muted": false,
                                      "multi_input_sort_id": 1,
                                      "from_socket": 48,
                                      "to_socket": 74
                                  }
                              }
                          ]
                      }
                  },
                  "is_tool": false,
                  "node_tool_idname": "",
                  "is_modifier": false,
                  "is_mode_object": false,
                  "is_mode_edit": false,
                  "is_mode_sculpt": false,
                  "is_mode_paint": false,
                  "is_type_mesh": false,
                  "is_type_curve": false,
                  "is_type_pointcloud": false,
                  "use_wait_for_click": false,
                  "is_type_grease_pencil": false,
                  "show_modifier_manage_panel": true
              }
          }
      ],
      "external": {},
      "scenes": {}
  }
# ---
